# ncurses_learn

./: .gitignore  CMakeLists.txt
src/: apple.cpp  board.cpp  day0.cpp  drawable.cpp  empty.cpp  engine.cpp  main.cpp  scoreboard.cpp  snake.cpp
